dummy cglib java 12 warning workaround